--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node server.ts",
-    "test": "ts-node verifyHash.ts && jest && echo \"\n🎉 All tests passed! Your assignment is completed ✅\""
+    "test": "jest && echo \"\n🎉 All tests passed! Your assignment is completed ✅\""
   },
   "keywords": [],
   "author": "",
